Fixed typo and added alt text

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ $(document).ready(function(){
             Dark Mode
         </button>
        
-        <img id="Hunter" src="Icon.jpg" style="max-width: 25%; height: auto;" class="center" borde>
+        <img id="Hunter" src="Icon.jpg" style="max-width: 25%; height: auto;" class="center" alt="Responsive image">
         
         <button type="button" class="btn btn-primary" id="hide">Hide</button>
         <button type="button" class="btn btn-secondary" id="show">Show</button>
